--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <div id="map" style="width: 600px; height: 500px;"></div>
-  <script src="scripts/getcapabilities.js"></script>
-  <script src="/scripts/map.js"></script>
+  <script src="scripts/controller.js"></script>
 </body>
 
 </html>
