--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 <head>
   <meta charset="UTF-8">
   <title>SOSClient</title>
+  <style>
+    #map {
+      width: 600px;
+      height: 500px;
+    }
+    /* css to customize Leaflet default styles  */
+
+    .customPopup .leaflet-popup-tip,
+    .customPopup .leaflet-popup-content-wrapper {
+      background: #ffffff;
+      color: #000000;
+    }
+  </style>
 </head>
 
 <body>
@@ -12,12 +25,14 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-  <div id="progress"><div id="progress-bar"></div></div>
+  <div id="progress">
+    <div id="progress-bar"></div>
+  </div>
   <div id="map" style="width: 600px; height: 500px;"></div>
-  <script src="scripts/controller.js"></script>
+  <script src="controller.js"></script>
 </body>
 
 </html>
