--- a/index.html
+++ b/index.html
@@ -1,55 +1,192 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>SOSClient</title>
-  <style>
-    #map {
+    <!-- Bootstrap Core CSS -->
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/moment.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
+    <script src="gauge.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<style>
+body {font-family: Arial;}
+
+/* Styling for Map*/
+#map {
       width: 600px;
       height: 500px;
     }
-    /* css to customize Leaflet default styles  */
+/* css to customize Leaflet default styles  */
 
-    .customPopup .leaflet-popup-tip,
-    .customPopup .leaflet-popup-content-wrapper {
+.customPopup .leaflet-popup-tip,
+.customPopup .leaflet-popup-content-wrapper {
       background: #ffffff;
       color: #000000;
     }
-  </style>
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 10px;
+    transition: 0.3s;
+    font-size: 10px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+#filterControl {
+    padding: 8px 8px;
+    font-size: 10px; 
+}
+
+</style>
 </head>
 
 <body>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/moment.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
-  <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-  <script src="gauge.js"></script>
-  <div class="pull-left" id="map"></div>
-  <div id="filterControl">
-    <input type="checkbox" value="Spatial" id="spatialFilter">Spatial Filter</input>
-    <input type="checkbox" value="Temporal" id="temporalFilter">Temporal Filter</input>
-    <input type="checkbox" value="Property" id="propertyFilter">Property Filter</input>
-    <select id="propSelect" disabled>
-      <option value="RESET" selected disabled hidden>Choose here</option>
-      <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
-      <option value="air_pressure_at_sea_level">Air Pressure At Sea Level</option>
-      <option value="sea_water_temperature">Sea Water Temperature</option>
-      <option value="sea_water_salinity">Sea Water Salinity</option>
-      <option value="air_temperature">Air Temperature</option>
-      <option value="waves">Waves</option>
-      <option value="winds">Winds</option>
-    </select>
-  </div>
-  <script src="controller.js"></script>
+    <div class="row">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10">
+            <h1 class="page-header">SOS Client: Ankur, Pankaj and Rajat</h1>
+        </div>
+        <div class="col-lg-1"></div>
+        <!-- /.col-lg-12 -->
+    </div>
+
+    <!-- Outermost row -->
+    <div class="row">
+        <!-- div class="col-lg-1"></div>-->
+        <!-- Holder for map -->
+        <div class="col-lg-5">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <div class="pull-left" id="map"></div>
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <!-- Panel for the Dropdown of various filters-->
+                <div class="col-lg-10"> 
+                    <div id="filterControl">
+                        <input type="checkbox" value="Spatial" id="spatialFilter">Spatial Filter</input>
+                        <input type="checkbox" value="Temporal" id="temporalFilter">Temporal Filter</input>
+                        <input type="checkbox" value="Property" id="propertyFilter">Property Filter</input>
+                        <select id="propSelect" disabled>
+                          <option value="RESET" selected disabled hidden>Choose here</option>
+                          <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
+                          <option value="air_pressure_at_sea_level">Air Pressure At Sea Level</option>
+                          <option value="sea_water_temperature">Sea Water Temperature</option>
+                          <option value="sea_water_salinity">Sea Water Salinity</option>
+                          <option value="air_temperature">Air Temperature</option>
+                          <option value="waves">Waves</option>
+                          <option value="winds">Winds</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-6">
+            <!-- Holder on the right side of the map -->
+            <!-- 1st row: gauges -->
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <div class="panel panel-default">
+                        <div id="gauges"></div>
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
+            <!-- 2nd row: tables -->
+            <div class="row"></div>
+            <!-- 3rd row: charts -->
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class=" tab btn-group">
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'London')">Sea Floor Depth Below Sea Surface</button>
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Air Pressure At Sea Level</button>
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Tokyo')">Sea Water Temperature</button>
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Sea Water Salinity</button>                  
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Air Temperature</button> 
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Currents</button>         
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Waves</button>
+                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Winds</button>
+                            </div>
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+            </div>
+        </div>
+        <!--<div class="col-lg-1"></div>-->
+    </div>    
+<script src="controller.js"></script>   
 </body>
 
 </html>
