--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/moment.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
@@ -37,7 +38,6 @@
   <div class="pull-left" id="map"></div>
   <div id="filterControl">
     <input type="checkbox" value="Spatial" id="spatialFilter">Spatial Filter</input>
-    <input type="checkbox" value="Temporal" id="temporalFilter">Temporal Filter</input>
     <input type="checkbox" value="Property" id="propertyFilter">Property Filter</input>
     <select id="propSelect" disabled>
       <option value="RESET" selected disabled hidden>Choose here</option>
