Some changes in UI

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>SOSClient</title>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -92,6 +93,12 @@ body {font-family: Arial;}
 #filterControl {
     padding: 8px 8px;
     font-size: 10px; 
+}
+
+#chart {
+    width: auto;
+    height: 200px;
+
 }
 
 </style>
@@ -160,23 +167,23 @@ body {font-family: Arial;}
             <!-- 3rd row: charts -->
             <div class="row">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-10">
+                <div class="col-lg-10" >
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class=" tab btn-group">
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'London')">Sea Floor Depth Below Sea Surface</button>
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Air Pressure At Sea Level</button>
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Tokyo')">Sea Water Temperature</button>
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Sea Water Salinity</button>                  
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Air Temperature</button> 
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Currents</button>         
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Waves</button>
-                                <button class="tablinks btn-xs" onclick="openCity(event, 'Paris')">Winds</button>
+                            <div class="tab btn-group">
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_floor_depth_below_sea_surface')">Sea Floor Depth Below Sea Surface</button>
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('air_pressure_at_sea_level')">Air Pressure At Sea Level</button>
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_water_temperature')">Sea Water Temperature</button>
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('sea_water_salinity')">Sea Water Salinity</button>                  
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('air_temperature')">Air Temperature</button> 
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('currents')">Currents</button>         
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('waves')">Waves</button>
+                                <button class="tablinks btn-xs" onclick="displayAnalytics('winds')">Winds</button>
                             </div>
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div id="morris-area-chart"></div>
+                        <div class="panel-body" id="chart">
+                            <!--<div id="chart" width="200px" height="200px"></div> -->
                         </div>
                         <!-- /.panel-body -->
                     </div>
