--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
@@ -20,6 +21,8 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
     <script src="gauge.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
 
 
     <meta charset="utf-8">
@@ -105,7 +108,6 @@ body {font-family: Arial;}
 </head>
 
 <body>
-<<<<<<< HEAD
     <div class="row">
         <div class="col-lg-1"></div>
         <div class="col-lg-10">
@@ -171,7 +173,18 @@ body {font-family: Arial;}
                 <div class="col-lg-10" >
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="tab btn-group">
+                            <select id="chartPropSelect" >
+                                <option value="RESET" selected>All Properties</option>
+                                <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
+                                <option value="air_pressure_at_sea_level">Air Pressure At Sea Level</option>
+                                <option value="sea_water_temperature">Sea Water Temperature</option>
+                                <option value="sea_water_salinity">Sea Water Salinity</option>
+                                <option value="air_temperature">Air Temperature</option>
+                                <option value="waves">Currents</option>
+                                <option value="waves">Waves</option>
+                                <option value="winds">Winds</option>
+                            </select>
+                            <!-- <div class="tab btn-group">
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('sea_floor_depth_below_sea_surface')">Sea Floor Depth Below Sea Surface</button>
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('air_pressure_at_sea_level')">Air Pressure At Sea Level</button>
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('sea_water_temperature')">Sea Water Temperature</button>
@@ -180,7 +193,7 @@ body {font-family: Arial;}
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('currents')">Currents</button>         
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('waves')">Waves</button>
                                 <button class="tablinks btn-xs" onclick="displayAnalytics('winds')">Winds</button>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body" id="chart">
@@ -195,39 +208,6 @@ body {font-family: Arial;}
         <!--<div class="col-lg-1"></div>-->
     </div>    
 <script src="controller.js"></script>   
-=======
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/leaflet.draw.css" />
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.css"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/moment.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
-  <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-  <script src="gauge.js"></script>
-  <div class="pull-left" id="map"></div>
-  <div id="filterControl">
-    <select id="propSelect" >
-      <option value="RESET" selected>All Properties</option>
-      <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
-      <option value="air_pressure_at_sea_level">Air Pressure At Sea Level</option>
-      <option value="sea_water_temperature">Sea Water Temperature</option>
-      <option value="sea_water_salinity">Sea Water Salinity</option>
-      <option value="air_temperature">Air Temperature</option>
-      <option value="waves">Waves</option>
-      <option value="winds">Winds</option>
-    </select>
-  </div>
-  <script src="controller.js"></script>
->>>>>>> e8293d3931797f57141b075d20ccce7aa386fb20
 </body>
 
 </html>
