--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {font-family: Arial;}
 
 #chart {
     width: auto;
-    height: 200px;
+    height: 250px;
 
 }
 
@@ -108,31 +108,30 @@ body {font-family: Arial;}
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10">
-            <h1 class="page-header">SOS Client: Ankur, Pankaj and Rajat</h1>
+    <!--<div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <p class="page-header">SOS Client: Ankur, Pankaj and Rajat</p>
         </div>
-        <div class="col-lg-1"></div>
-        <!-- /.col-lg-12 -->
-    </div>
-
+        <div class="col-sm-1"></div>
+    </div> -->
+    <br><br>
     <!-- Outermost row -->
     <div class="row">
-        <!-- div class="col-lg-1"></div>-->
+        <!-- div class="col-md-1"></div>-->
         <!-- Holder for map -->
-        <div class="col-lg-5">
+        <div class="col-md-5">
             <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-10">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
                     <div class="pull-left" id="map"></div>
                 </div>
-                <div class="col-lg-1"></div>
+                <div class="col-md-1"></div>
             </div>
             <div class="row">
-                <div class="col-lg-1"></div>
+                <div class="col-md-1"></div>
                 <!-- Panel for the Dropdown of various filters-->
-                <div class="col-lg-10"> 
+                <div class="col-md-10"> 
                     <div id="filterControl">
                         <input type="checkbox" value="Spatial" id="spatialFilter">Spatial Filter</input>
                         <input type="checkbox" value="Temporal" id="temporalFilter">Temporal Filter</input>
@@ -149,28 +148,46 @@ body {font-family: Arial;}
                         </select>
                     </div>
                 </div>
-                <div class="col-lg-1"></div>
+                <div class="col-md-1"></div>
             </div>
         </div>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-6">
+        <div class="col-md-1"></div>
+        <div class="col-md-6">
             <!-- Holder on the right side of the map -->
             <!-- 1st row: gauges -->
             <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-10">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
                     <div class="panel panel-default">
                         <div id="gauges"></div>
                     </div>
                 </div>
-                <div class="col-lg-1"></div>
+                <div class="col-md-1"></div>
             </div>
             <!-- 2nd row: tables -->
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10 node_data_table" style="overflow-y: scroll;max-height: 200px;min-height: 50px">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th>Stn Id</th>
+                          <th>Sensor Id</th>
+                          <th>DateTime</th>
+                          <th>Reading</th>
+                        </tr>
+                      </thead>
+                      <tbody class="table_data">
+
+                      </tbody>
+                    </table>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
             <!-- 3rd row: charts -->
             <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-10" >
+                <div class="col-md-1"></div>
+                <div class="col-md-10" >
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <select id="chartPropSelect" >
@@ -202,10 +219,10 @@ body {font-family: Arial;}
                         <!-- /.panel-body -->
                     </div>
                 </div>
-                <div class="col-lg-1"></div>
+                <div class="col-md-1"></div>
             </div>
         </div>
-        <!--<div class="col-lg-1"></div>-->
+        <!--<div class="col-md-1"></div>-->
     </div>    
 <script src="controller.js"></script>   
 </body>
