--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.css"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.2/leaflet.draw.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gauge.js/1.3.6/gauge.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-  <script src="gauge.js"></script>
   <div class="pull-left" id="map"></div>
   <div id="filterControl">
     <select id="propSelect" >
@@ -50,6 +50,9 @@
       <option value="waves">Waves</option>
       <option value="winds">Winds</option>
     </select>
+  </div>
+  <div id="gauges">
+    <canvas id='he'></canvas>
   </div>
   <script src="controller.js"></script>
 </body>
