--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" type="text/css" href="css/leaflet.draw.css" />
+  <link rel="stylesheet" type="text/css" href="css/popup.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -47,21 +48,13 @@
       <h1 class="center-align">SOS Client for NDBC</h1></div>
   </div>
   <div class="row">
-    <div id="map" class="col s6"></div>
+    <div id="map" class="col s6 custom-popup"></div>
     <div id="gauges" class="col s2">
       <canvas id='he'></canvas>
     </div>
   </div>
-  <!-- <div class="row">
-      <ul id="filterControl" class="dropdown-content">
-        <li><a href="#!">one<span class="badge">1</span></a></li>
-        <li><a href="#!">two<span class="new badge">1</span></a></li>
-        <li><a href="#!">three</a></li>
-      </ul>
-      <a class="btn dropdown-trigger" href="#!" data-target="dropdown2">Dropdown<i class="material-icons right">arrow_drop_down</i></a>
-    </div> -->
-  <div class="row">
-    <div id="filterControl" class="dropdown-content">
+  <div class="input-field col s12">
+    <div id="filterControl">
       <select id="propSelect">
         <option value="RESET" selected>All Properties</option>
         <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
