--- a/index.html
+++ b/index.html
@@ -44,28 +44,61 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
   <div class="row">
-    <div class="col s1">
+    <div class="col s12">
       <h1 class="center-align">SOS Client for NDBC</h1></div>
   </div>
   <div class="row">
     <div id="map" class="col s6 custom-popup"></div>
-    <div id="gauges" class="col s2">
+    <!-- <div id="gauges" class="col s2">
       <canvas id='he'></canvas>
+    </div> -->
+    <div class="col s6">
+
     </div>
   </div>
-  <div class="input-field col s12">
-    <div id="filterControl">
-      <select id="propSelect">
-        <option value="RESET" selected>All Properties</option>
-        <option value="sea_floor_depth_below_sea_surface">Sea Floor Depth Below Sea Surface</option>
-        <option value="air_pressure_at_sea_level">Air Pressure At Sea Level</option>
-        <option value="sea_water_temperature">Sea Water Temperature</option>
-        <option value="sea_water_salinity">Sea Water Salinity</option>
-        <option value="air_temperature">Air Temperature</option>
-        <option value="waves">Waves</option>
-        <option value="winds">Winds</option>
-      </select>
-    </div>
+  <div class="row">
+    <div class="col s4 m8 offset-m2 l4">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img href="https://github.com/omshinde" src="images/rajat.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Rajat Shinde
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s4 m8 offset-m2 l4">
+          <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="row valign-wrapper">
+              <div class="col s2">
+                <img href="https://github.com/daas-ankur-shukla" src="images/ankur.jpg" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+              </div>
+              <div class="col s10">
+                <span class="black-text">
+                  Ankur Shukla
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s4 m8 offset-m2 l4">
+            <div class="card-panel grey lighten-5 z-depth-1">
+              <div class="row valign-wrapper">
+                <div class="col s2">
+                  <img href="https://github.com/pan111" src="images/pankaj.png" alt="" class="circle responsive-img" width='30' height='30'> <!-- notice the "circle" class -->
+                </div>
+                <div class="col s10">
+                  <span class="black-text">
+                    Pankaj Tarone
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
   </div>
   <script src="controller.js"></script>
 </body>
